@@ -25,6 +25,7 @@ Verilator 4.201 devel
 * Fix false TIMESCALEMOD on generate-ignored instances (#2838). [Kaleb Barrett]
 * Fix --output-split with class extends (#2839). [Iru Cai]
 * Fix false WIDTHCONCAT on casted constant (#2849). [Rupert Swarbrick]
+* Fix Cygwin example compile issues (#2856). [Mark Shaw]
 
 
 Verilator 4.200 2021-03-12
